--- a/templates/results.html
+++ b/templates/results.html
@@ -5,7 +5,7 @@
 	<a href="/"> Search again</a>
 	<ul>
 		{% for result in results %}
-		<li>{{result}}</li>
+		<li>{{result.forge.name}}: <a href="{{result.url}}">{{result.name}}</a>: {{result.description}}</li>
 		{% endfor %}
 	</ul>
 </body>
